Add Lab 3: Grove Distributed Serving and improvements
- Added complete Lab 3 notebook for Grove distributed serving
  - NATS and etcd installation with correct configurations
  - Grove-enabled Dynamo deployment with 2 workers
  - Comprehensive NATS metrics documentation
  - Traffic generation for testing distributed systems

- Fixed NATS monitoring
  - Created fixed NATS Overview dashboard with correct metrics
  - Changed nats_server_cpu -> nats_varz_cpu
  - Added message rate visualization and stats
  - Updated oneshot.sh to deploy fixed dashboard

- Improved all notebooks
  - Fixed benchmark commands to use correct paths (dynamo-grove-brev)
  - Made benchmark commands non-executable (markdown text blocks)
  - Fixed kubectl wait syntax errors
  - Added NAMESPACE variable to all cells that need it
  - Fixed worker component labels (Worker -> VllmWorker)

- Repository cleanup
  - Removed old lab1 directory
  - Removed Jupyter checkpoint files
  - Updated README with Lab 3 information
  - Fixed repository name references (dynamo-brev -> dynamo-grove-brev)

- Updated infrastructure
  - NATS with Prometheus exporter enabled
  - etcd using bitnamilegacy mirror (bypasses Docker Hub auth)
  - PodMonitors for both NATS and etcd metrics collection

--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8376d811",
+   "id": "d1017b9f",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcdc41a6",
+   "id": "ab602401",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffb0f0d9",
+   "id": "fbae0a6c",
    "metadata": {},
    "source": [
     "### Step 2: Verify Monitoring Stack is Running\n",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2ad2322",
+   "id": "f3977d64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb5f364b",
+   "id": "e8e50578",
    "metadata": {},
    "source": [
     "---\n",
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6821b10a",
+   "id": "e0a2d9fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e2cbec1",
+   "id": "235bb664",
    "metadata": {},
    "source": [
     "### Step 2: Check if PodMonitors Were Created\n",
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc133e01",
+   "id": "ff421149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a227d78",
+   "id": "88f1bfab",
    "metadata": {},
    "source": [
     "### Step 3: Label PodMonitors for Prometheus Discovery\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb9ca2b4",
+   "id": "8ba1accd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "515c4f7d",
+   "id": "5cbdd49e",
    "metadata": {},
    "source": [
     "### Step 4: Manually Test Metrics Endpoint\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "849ffd15",
+   "id": "b4891b95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2089626",
+   "id": "cfe87e98",
    "metadata": {},
    "source": [
     "### Step 5: Send Test Traffic to Generate Metrics\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42b37ce7",
+   "id": "3588423e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2699696c",
+   "id": "4317f768",
    "metadata": {},
    "source": [
     "---\n",
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a25b588",
+   "id": "d13d0c9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
     "EOF\n",
     "\n",
     "# Add dashboard JSON with proper indentation\n",
-    "sed 's/^/    /' ~/dynamo-grove-brev/resources/dynamo-inference-dashboard.json >> /tmp/dynamo-inference-dashboard-configmap.yaml\n",
+    "sed 's/^/    /' ~/dynamo-brev/resources/dynamo-inference-dashboard.json >> /tmp/dynamo-inference-dashboard-configmap.yaml\n",
     "\n",
     "# Apply ConfigMap\n",
     "kubectl apply -f /tmp/dynamo-inference-dashboard-configmap.yaml\n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16283db9",
+   "id": "d38d663d",
    "metadata": {},
    "source": [
     "---\n",
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e68421dd",
+   "id": "e9c00780",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b949c1d0",
+   "id": "c14bc9e4",
    "metadata": {},
    "source": [
     "---\n",
@@ -542,7 +542,7 @@
     "\n",
     "```\n",
     "# Test with low concurrency\n",
-    "cd ~/dynamo-grove-brev/resources\n",
+    "cd ~/dynamo-brev/resources\n",
     "./run-benchmark.sh baseline\n",
     "\n",
     "# Check Grafana - note the TTFT values\n",
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeacaa32",
+   "id": "4b0d9fd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49326404",
+   "id": "26c2ee3a",
    "metadata": {},
    "source": [
     "### Exercise 4: Cleanup Monitoring Stack\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c0c0b0",
+   "id": "22522b5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42cee478",
+   "id": "e407e245",
    "metadata": {},
    "source": [
     "---\n",
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a466af2",
+   "id": "e2857eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "003a342d",
+   "id": "077ce301",
    "metadata": {},
    "source": [
     "### Grafana Dashboard Not Appearing\n"
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fde80aa3",
+   "id": "7a6cb3ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e23abef",
+   "id": "b8fff681",
    "metadata": {},
    "source": [
     "### Can't Access Grafana\n"
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31106953",
+   "id": "5ebef975",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13143710",
+   "id": "1bc60455",
    "metadata": {},
    "source": [
     "### Port Forwards Not Working\n"
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28e2310d",
+   "id": "30c78438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "497fcc50",
+   "id": "adc7052c",
    "metadata": {},
    "source": [
     "---\n",
