--- a/01-dynamo-deployment-guide.ipynb
+++ b/01-dynamo-deployment-guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "00e57c6b",
+   "id": "f3327eb1",
    "metadata": {},
    "source": [
     "# Lab 1: Introduction and Kubernetes-Based Deployment\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c03cdc1",
+   "id": "9d67b9c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dc6dea6",
+   "id": "c27e9cac",
    "metadata": {},
    "source": [
     "### Step 3: Verify Kubernetes Access\n"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "289513c7",
+   "id": "38508871",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f130d071",
+   "id": "09062e21",
    "metadata": {},
    "source": [
     "### Step 4: Set Up NGC Authentication\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c576416",
+   "id": "5ed0b503",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5c796b3",
+   "id": "abdb4f41",
    "metadata": {},
    "source": [
     "#### Set HuggingFace Token\n",
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c77da7f2",
+   "id": "b8671ad1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a889b72",
+   "id": "0e0a2fef",
    "metadata": {},
    "source": [
     "#### Login to NGC Registry"
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05a18966",
+   "id": "689d08b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9051713c",
+   "id": "e40362d6",
    "metadata": {},
    "source": [
     "### Step 5: Create Your Namespace"
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c570ee95",
+   "id": "6015f98f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf10a937",
+   "id": "5a414e1a",
    "metadata": {},
    "source": [
     "### Step 6: Create NGC Pull Secret\n",
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec639304",
+   "id": "84f4f493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3fc71e0",
+   "id": "ee50142e",
    "metadata": {},
    "source": [
     "### Step 7: Create HuggingFace Token Secret"
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efabf01d",
+   "id": "7c869397",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44f3b521",
+   "id": "6b33b4a5",
    "metadata": {},
    "source": [
     "## Section 2: Install Dynamo Platform\n",
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27052140",
+   "id": "e778d43b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa4fc622",
+   "id": "c0fc3ae2",
    "metadata": {},
    "source": [
     "### Step 1b: Install CRDs (Optional - Instructor May Do This)\n",
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36eeb099",
+   "id": "296fa397",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1529bf14",
+   "id": "e907a9e3",
    "metadata": {},
    "source": [
     "### Step 2: Install Dynamo Platform\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80d4fac0",
+   "id": "322cccee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "812ef343",
+   "id": "86ae264b",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Platform Pods to Be Ready\n",
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcdd8924",
+   "id": "286db79c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20f72198",
+   "id": "072176c9",
    "metadata": {},
    "source": [
     "\n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffc24471",
+   "id": "bfac7fa8",
    "metadata": {},
    "source": [
     "## Section 3: Deploy Your First Model with Disaggregated Serving\n",
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e1580ea",
+   "id": "e5ec5552",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db6a0c6b",
+   "id": "5d79b4f8",
    "metadata": {},
    "source": [
     "### Step 2: Deploy the Model\n"
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "310214f0",
+   "id": "03e2b086",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7943822b",
+   "id": "40a05ba7",
    "metadata": {},
    "source": [
     "### Step 3: Monitor Deployment Progress\n"
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "682e59d0",
+   "id": "b1c115ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae03d39e",
+   "id": "e7a35006",
    "metadata": {},
    "source": [
     "### Step 3b: Troubleshoot Pod Issues (If Pods Are Crashing)\n",
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "830c0004",
+   "id": "2f80022c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfd8776f",
+   "id": "8df79893",
    "metadata": {},
    "source": [
     "### Step 4: View Worker Logs (Optional)\n",
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "704347e7",
+   "id": "813e759b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "965b3826",
+   "id": "a109b2e5",
    "metadata": {},
    "source": [
     "## Section 4: Testing and Validation\n",
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9cd7fbf",
+   "id": "ae3e96c3",
    "metadata": {},
    "source": [
     "### Understanding Disaggregated Serving Trade-offs\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c179e24",
+   "id": "f0b1aaa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "970cceaa",
+   "id": "06e68cdf",
    "metadata": {},
    "source": [
     "### Step 2: Test the `/v1/models` Endpoint\n"
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68aa602b",
+   "id": "ba50929e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c983dff",
+   "id": "3f9d1c6e",
    "metadata": {},
    "source": [
     "### Step 3: Simple Non-Streaming Chat Completion\n"
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e33a5f12",
+   "id": "cfc6c6ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4930c402",
+   "id": "a7a49825",
    "metadata": {},
    "source": [
     "### Step 4: Test Streaming Response\n"
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ccf5757",
+   "id": "e39a016b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86ce6e78",
+   "id": "0f5ab6e0",
    "metadata": {},
    "source": [
     "### Step 5: Test with Different Parameters\n"
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2b677b8",
+   "id": "c085e975",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "494d6016",
+   "id": "f912620c",
    "metadata": {},
    "source": [
     "## Section 5: Benchmarking with AI-Perf\n",
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0492c512",
+   "id": "24d55290",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9715191a",
+   "id": "e8b5d525",
    "metadata": {},
    "source": [
     "### Step 2: Run Baseline Benchmark (Low Concurrency)\n",
@@ -1043,25 +1043,12 @@
     "**To run this benchmark:**\n",
     "\n",
     "1. Open a new terminal (File → New → Terminal in JupyterLab)\n",
-    "2. Copy and paste this command:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5460a3a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "cd ~/dynamo-grove-brev/resources && ./run-benchmark.sh baseline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "21990861",
-   "metadata": {},
-   "source": [
+    "2. Copy and paste this command:\n",
+    "\n",
+    "```\n",
+    "cd ~/dynamo-grove-brev/resources && ./run-benchmark.sh baseline\n",
+    "```\n",
+    "\n",
     "This will run a low concurrency benchmark (1 concurrent request, 100 total requests) and display metrics including:\n",
     "- Time to First Token (TTFT)\n",
     "- Token throughput\n",
@@ -1075,25 +1062,12 @@
     "**To run this benchmark:**\n",
     "\n",
     "1. Open a new terminal (File → New → Terminal in JupyterLab)\n",
-    "2. Copy and paste this command:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "add11f26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "cd ~/dynamo-grove-brev/resources && ./run-benchmark.sh high"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0ea1a3af",
-   "metadata": {},
-   "source": [
+    "2. Copy and paste this command:\n",
+    "\n",
+    "```\n",
+    "cd ~/dynamo-grove-brev/resources && ./run-benchmark.sh high\n",
+    "```\n",
+    "\n",
     "This will run a high concurrency benchmark (4 concurrent requests, 200 total requests) to stress test the system and see how it handles multiple simultaneous users.\n",
     "\n",
     "### Step 4: Run Benchmark with Request Rate\n",
@@ -1103,25 +1077,12 @@
     "**To run this benchmark:**\n",
     "\n",
     "1. Open a new terminal (File → New → Terminal in JupyterLab)\n",
-    "2. Copy and paste this command:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c609129",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "cd ~/dynamo-grove-brev/resources && ./run-benchmark.sh rate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b30bae6e",
-   "metadata": {},
-   "source": [
+    "2. Copy and paste this command:\n",
+    "\n",
+    "```\n",
+    "cd ~/dynamo-grove-brev/resources && ./run-benchmark.sh rate\n",
+    "```\n",
+    "\n",
     "This will run a request rate benchmark (10 requests per second, 200 total requests) to simulate a steady stream of users hitting the API at a controlled rate.\n",
     "\n",
     "### Step 5: Analyze Results\n",
@@ -1135,7 +1096,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4709cd92",
+   "id": "8d10e88d",
    "metadata": {},
    "source": [
     "### Cleanup\n",
@@ -1146,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e94dafe2",
+   "id": "a8a60fd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92f15366",
+   "id": "f7f3c345",
    "metadata": {},
    "source": [
     "**Note:** Keep your namespace and platform for Lab 2! Only delete the deployment, not the namespace.\n",
@@ -1177,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c3c9e15",
+   "id": "cbccf34e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5c9b136",
+   "id": "7d227257",
    "metadata": {},
    "source": [
     "### View Pod Logs\n"
@@ -1203,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d69e4d5",
+   "id": "413a0263",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc73f36b",
+   "id": "b10e7300",
    "metadata": {},
    "source": [
     "### Check Deployment Status\n"
@@ -1230,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3e0353b",
+   "id": "166257bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd7c541c",
+   "id": "740e7452",
    "metadata": {},
    "source": [
     "### Check Recent Events\n"
@@ -1257,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "518bb464",
+   "id": "c9da5046",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90533b5f",
+   "id": "f961d966",
    "metadata": {},
    "source": [
     "### Common Issues\n",
@@ -1315,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7caf97c2",
+   "id": "ab34854b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "394cf320",
+   "id": "426e4483",
    "metadata": {},
    "source": [
     "### A1. Environment Setup\n"
@@ -1334,7 +1295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac2d529b",
+   "id": "3aa3ffa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34dcd98a",
+   "id": "50592bae",
    "metadata": {},
    "source": [
     "### A2. Install Dynamo Platform (Namespace-Scoped)\n"
@@ -1370,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5202498f",
+   "id": "5f43570d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1416,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0c54d20",
+   "id": "dfd1df26",
    "metadata": {},
    "source": [
     "### A3. Deploy Your First Model\n",
@@ -1513,7 +1474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68b82bd2",
+   "id": "f086c5f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,7 +1499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d7e9629",
+   "id": "dc55dbab",
    "metadata": {},
    "source": [
     "### A4. Test the Deployment\n"
@@ -1547,7 +1508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45745a88",
+   "id": "b52d7f74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,7 +1530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0ba2413",
+   "id": "d4e4e3a2",
    "metadata": {},
    "source": [
     "### A5. Benchmark with AI-Perf\n"
@@ -1578,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76a1f5a1",
+   "id": "12b4830e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,7 +1574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14a85915",
+   "id": "59a06279",
    "metadata": {},
    "source": [
     "### A6. Scale Your Deployment\n"
@@ -1622,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5679bb7b",
+   "id": "626a95dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e1f941b",
+   "id": "c892170b",
    "metadata": {},
    "source": [
     "### A7. Cleanup\n"
@@ -1650,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0766ac25",
+   "id": "cfbbd0c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1668,7 +1629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b0c7e58",
+   "id": "5f019aa2",
    "metadata": {},
    "source": [
     "### A8. Troubleshooting\n"
@@ -1677,7 +1638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec036cae",
+   "id": "04ae7b6d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1705,7 +1666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f90995e",
+   "id": "0a2e6d5a",
    "metadata": {},
    "source": [
     "\n"
@@ -1718,6 +1679,23 @@
    "formats": "ipynb,md",
    "main_language": "python",
    "notebook_metadata_filter": "jupytext,-kernelspec,-widgets,-language_info"
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
