Fix Lab 3: Update cache monitoring and cleanup sections
- Changed cache monitoring to check worker logs for NIXL/Grove/NATS activity instead of non-existent metrics endpoint
- Removed Step 5 (Query NATS Metrics Directly) as it was redundant
- Fixed cleanup section order:
  * Step 1: Remove Grove demo deployment
  * Step 2: Verify Lab 1 is still running (removed non-existent backup restore)
  * Step 3: Optional removal of NATS/etcd infrastructure
- Added proper cleanup for PodMonitors

--- a/03-grove-distributed-serving.ipynb
+++ b/03-grove-distributed-serving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "18be8753",
+   "id": "6479c34e",
    "metadata": {},
    "source": [
     "# Lab 3: Distributed Serving with Grove\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aff4d95e",
+   "id": "2549d883",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99e469ae",
+   "id": "c889a2b6",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS Message Bus\n",
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59dce52e",
+   "id": "c54f906b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08da698c",
+   "id": "e5edeed4",
    "metadata": {},
    "source": [
     "### Step 3: Install etcd Coordination Layer\n",
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dde57e1e",
+   "id": "1e4aa820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d528b39",
+   "id": "d3a44cbe",
    "metadata": {},
    "source": [
     "### Step 4: Verify Grove Infrastructure\n",
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03a4f072",
+   "id": "b2d14982",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27a2d834",
+   "id": "b280c26e",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring\n",
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "662ffb2f",
+   "id": "1dce60ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c43789a0",
+   "id": "79868f42",
    "metadata": {},
    "source": [
     "---\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17856cea",
+   "id": "b1aa984e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f5554e7",
+   "id": "6e422a30",
    "metadata": {},
    "source": [
     "### Step 2: Create NodePort Service\n",
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd99cd06",
+   "id": "1537b748",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9922f128",
+   "id": "b396a494",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caeb6b04",
+   "id": "fb961026",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e73ea98",
+   "id": "0bb47ab7",
    "metadata": {},
    "source": [
     "### Step 4: Test Inference"
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4f295dc",
+   "id": "2f5dbb07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f689aca2",
+   "id": "a73dfeeb",
    "metadata": {},
    "source": [
     "### Step 5: Verify NATS Communication"
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85c76e13",
+   "id": "cbe2d5fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b19d28b",
+   "id": "32b92464",
    "metadata": {},
    "source": [
     "---\n",
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "389ce07c",
+   "id": "6eaa0d4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36aa05e6",
+   "id": "579fa052",
    "metadata": {},
    "source": [
     "### Step 2: Understanding NATS Metrics\n",
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "744a1819",
+   "id": "dad64c2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,55 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adaf5a64",
-   "metadata": {},
-   "source": [
-    "### Step 5: Query NATS Metrics Directly\n",
-    "\n",
-    "The generic NATS dashboard may not work, but you can view NATS metrics directly in Grafana Explore:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "362e005c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "cat <<'EOF'\n",
-    "\n",
-    "📊 To view NATS metrics in Grafana:\n",
-    "\n",
-    "1. Open Grafana: https://grafana0-$(hostname | sed 's/^brev-//')​.brevlab.com/\n",
-    "2. Go to Explore (compass icon in left sidebar)\n",
-    "3. Try these PromQL queries:\n",
-    "\n",
-    "**Dynamo's NATS Client Metrics:**\n",
-    "- dynamo_component_nats_client_current_connections\n",
-    "- rate(dynamo_component_nats_client_in_messages[1m])\n",
-    "- rate(dynamo_component_nats_client_out_messages[1m])\n",
-    "- rate(dynamo_component_nats_service_requests_total[1m])\n",
-    "\n",
-    "**NATS Server Metrics:**\n",
-    "- nats_varz_connections{pod=\"nats-0\"}\n",
-    "- rate(nats_varz_in_msgs[1m])\n",
-    "- rate(nats_varz_out_msgs[1m])\n",
-    "- nats_varz_mem / (1024*1024)  # Memory in MB\n",
-    "- nats_server_total_messages\n",
-    "\n",
-    "**etcd Health:**\n",
-    "- etcd_server_has_leader\n",
-    "- etcd_mvcc_db_total_size_in_bytes / (1024*1024)  # Size in MB\n",
-    "\n",
-    "These metrics show Grove's NATS usage and etcd coordination in real-time!\n",
-    "\n",
-    "EOF"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d40af15f",
+   "id": "a9f20279",
    "metadata": {},
    "source": [
     "---\n",
@@ -848,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1679d02a",
+   "id": "5dc382df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,44 +836,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef3c5442",
+   "id": "bad5a960",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## Section 6: Advanced Grove Features (Optional)\n",
+    "## Section 6: Advanced Grove Features\n",
     "\n",
     "### Cache Monitoring\n",
     "\n",
-    "Check cache statistics from the workers:"
+    "Check Grove coordination through worker logs:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85f67d6f",
+   "id": "78139745",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# Get cache stats from a worker pod\n",
+    "# Get cache stats from worker logs\n",
     "NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "WORKER_POD=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker,nvidia.com/dynamo-graph-deployment-name=vllm-grove-demo -o jsonpath='{.items[0].metadata.name}' 2>/dev/null)\n",
     "\n",
     "if [ -n \"$WORKER_POD\" ]; then\n",
-    "    echo \"Checking cache stats from worker: $WORKER_POD\"\n",
-    "    kubectl exec -n $NAMESPACE $WORKER_POD -- curl -s localhost:8000/metrics 2>/dev/null | grep -E \"(cache_hit|cache_miss)\" || echo \"Cache metrics not available yet\"\n",
+    "    echo \"Checking NIXL/Grove activity in worker logs...\"\n",
+    "    echo \"\"\n",
+    "    kubectl logs -n $NAMESPACE $WORKER_POD --tail=100 | grep -i \"nixl\\|grove\\|nats\" | tail -10\n",
+    "    \n",
+    "    echo \"\"\n",
+    "    echo \"Worker pod: $WORKER_POD\"\n",
+    "    echo \"\"\n",
+    "    echo \"What to look for:\"\n",
+    "    echo \"  - NIXL initialization messages\"\n",
+    "    echo \"  - NATS connection status\"\n",
+    "    echo \"  - KV cache registration\"\n",
+    "    echo \"  - UCX backend messages (if using RDMA)\"\n",
     "else\n",
     "    echo \"⚠️ No worker pods found\"\n",
+    "    echo \"Make sure the vllm-grove-demo deployment is running\"\n",
     "fi"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5f87c91a",
+   "id": "d94ffc8a",
    "metadata": {},
    "source": [
+    "**Note**: Cache hit/miss metrics depend on workload patterns. In a single-node setup, local cache is more efficient than distributed cache, so you may not see significant Grove cache sharing activity.\n",
+    "\n",
     "### NATS Health Check\n",
     "\n",
     "Verify NATS is functioning correctly:"
@@ -930,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e1aeb22",
+   "id": "7fc33bec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +911,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be9a4d21",
+   "id": "e218be83",
    "metadata": {},
    "source": [
     "### etcd Health Check\n",
@@ -957,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6550516b",
+   "id": "8a078334",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +946,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05cbb89b",
+   "id": "58af4d12",
    "metadata": {},
    "source": [
     "---\n",
@@ -994,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0625cbee",
+   "id": "2174d794",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,93 +976,81 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7be6c27f",
+   "id": "3eef79c2",
    "metadata": {},
    "source": [
-    "### Step 2: (Optional) Restore Lab 1 Deployment\n",
+    "### Step 2: Verify Lab 1 Deployment is Still Running\n",
     "\n",
-    "If you want to restore the original Lab 1 deployment:"
+    "Your original Lab 1 deployment should still be running on port 30100:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b94d322f",
+   "id": "eca810a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# Restore Lab 1 deployment from backup\n",
+    "# Check Lab 1 deployment status\n",
     "NAMESPACE=${NAMESPACE:-dynamo}\n",
     "NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
     "\n",
-    "if [ -f /tmp/lab1-deployment-backup.yaml ]; then\n",
-    "    echo \"Restoring Lab 1 deployment...\"\n",
-    "    kubectl apply -f /tmp/lab1-deployment-backup.yaml\n",
-    "    \n",
-    "    echo \"Waiting for Lab 1 deployment to be ready...\"\n",
-    "    sleep 10\n",
-    "    kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-graph-deployment-name=vllm-disagg-router\n",
-    "    \n",
-    "    echo \"\"\n",
-    "    echo \"✓ Lab 1 deployment restored\"\n",
-    "    echo \"  Access at: http://$NODE_IP:30100\"\n",
-    "else\n",
-    "    echo \"No backup found at /tmp/lab1-deployment-backup.yaml\"\n",
-    "    echo \"You can redeploy Lab 1 by running the cells in 01-dynamo-deployment-guide.ipynb\"\n",
-    "fi"
+    "echo \"Checking Lab 1 deployment...\"\n",
+    "kubectl get dynamographdeployment vllm-disagg-router -n $NAMESPACE\n",
+    "\n",
+    "echo \"\"\n",
+    "echo \"Lab 1 pods:\"\n",
+    "kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-graph-deployment-name=vllm-disagg-router\n",
+    "\n",
+    "echo \"\"\n",
+    "echo \"✓ Lab 1 deployment is available at: http://$NODE_IP:30100\"\n",
+    "echo \"\"\n",
+    "echo \"Test it:\"\n",
+    "echo \"  curl http://$NODE_IP:30100/v1/models\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6591e4e4",
+   "id": "707e1967",
    "metadata": {},
    "source": [
-    "### Step 3: (Optional) Remove Grove Infrastructure\n",
+    "### Step 3: Remove Grove Infrastructure (Optional)\n",
     "\n",
-    "If you want to remove NATS and etcd after learning:"
+    "Only remove NATS and etcd if you're done experimenting with Grove:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abc6cdb6",
+   "id": "835f39cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# This is optional - only do if you're done with Grove learning\n",
+    "# Remove NATS\n",
+    "echo \"Removing NATS...\"\n",
+    "helm uninstall nats -n nats-system\n",
+    "kubectl delete namespace nats-system\n",
     "\n",
-    "echo \"━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\"\n",
-    "echo \"🧹 Grove Infrastructure Cleanup (Optional)\"\n",
-    "echo \"━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\"\n",
-    "echo \"\"\n",
-    "echo \"This will remove NATS and etcd from your cluster.\"\n",
-    "echo \"\"\n",
-    "read -p \"Continue? (y/N) \" -n 1 -r\n",
-    "echo \"\"\n",
+    "# Remove etcd  \n",
+    "echo \"Removing etcd...\"\n",
+    "helm uninstall etcd -n etcd-system\n",
+    "kubectl delete namespace etcd-system\n",
     "\n",
-    "if [[ $REPLY =~ ^[Yy]$ ]]; then\n",
-    "    # Uninstall NATS\n",
-    "    echo \"Removing NATS...\"\n",
-    "    helm uninstall nats -n nats-system 2>/dev/null || echo \"  NATS not found\"\n",
-    "    kubectl delete namespace nats-system 2>/dev/null || echo \"  Namespace not found\"\n",
-    "    \n",
-    "    # Uninstall etcd\n",
-    "    echo \"Removing etcd...\"\n",
-    "    helm uninstall etcd -n etcd-system 2>/dev/null || echo \"  etcd not found\"\n",
-    "    kubectl delete namespace etcd-system 2>/dev/null || echo \"  Namespace not found\"\n",
-    "    \n",
-    "    echo \"\"\n",
-    "    echo \"✓ Grove infrastructure removed\"\n",
-    "else\n",
-    "    echo \"Cleanup cancelled - Grove infrastructure kept for future experiments\"\n",
-    "fi"
+    "# Remove PodMonitors\n",
+    "kubectl delete podmonitor nats -n nats-system 2>/dev/null || true\n",
+    "kubectl delete podmonitor etcd -n etcd-system 2>/dev/null || true\n",
+    "\n",
+    "echo \"\"\n",
+    "echo \"✓ Grove infrastructure removed\"\n",
+    "echo \"\"\n",
+    "echo \"Note: You can reinstall NATS/etcd anytime by re-running Section 2 of this lab\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "27bd38a6",
+   "id": "90caa814",
    "metadata": {},
    "source": [
     "---\n",
@@ -1162,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fc52ce4",
+   "id": "94460dfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03a9a9f3",
+   "id": "3d722cb4",
    "metadata": {},
    "source": [
     "### etcd Not Starting"
@@ -1188,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c54e20f",
+   "id": "fe508d68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f3f8378",
+   "id": "874a8f29",
    "metadata": {},
    "source": [
     "### Workers Not Connecting to Grove"
@@ -1214,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa6bb615",
+   "id": "97cad060",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcb601a3",
+   "id": "fadca62b",
    "metadata": {},
    "source": [
     "### No Cache Sharing Observed\n",
@@ -1267,23 +1220,6 @@
    "formats": "ipynb,md",
    "main_language": "python",
    "notebook_metadata_filter": "jupytext,-kernelspec,-widgets,-language_info"
-  },
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.12"
   }
  },
  "nbformat": 4,
