Add explanation of multiple frontend architecture to Lab 3
- Clarified that frontend replicas are not one-per-node
- Explained Kubernetes Service load balancing across frontends
- Added typical scaling patterns for different cluster sizes
- Described traffic flow: LoadBalancer -> Service -> Frontends -> NATS -> Workers
- Highlighted benefits: HA, load distribution, dynamic discovery, flexible scaling
- Noted single-node setup limitations
- Fixed documentation links (Grove, NATS, etcd)

--- a/03-grove-distributed-serving.ipynb
+++ b/03-grove-distributed-serving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6479c34e",
+   "id": "c3fe7c45",
    "metadata": {},
    "source": [
     "# Lab 3: Distributed Serving with Grove\n",
@@ -83,6 +83,51 @@
     "- Improves cache hit rates\n",
     "- Enables efficient multi-node scaling\n",
     "\n",
+    "### How Multiple Frontends Work\n",
+    "\n",
+    "The architecture diagram shows 2 frontends, but **frontend replicas ≠ one per node**. Here's how it actually works in production:\n",
+    "\n",
+    "**Frontend Scaling Strategy**:\n",
+    "```\n",
+    "Small cluster (3 nodes):    2-3 frontend replicas\n",
+    "Medium cluster (10 nodes):  3-5 frontend replicas\n",
+    "Large cluster (50+ nodes):  5-10 frontend replicas\n",
+    "```\n",
+    "\n",
+    "**Load Balancing via Kubernetes Service**:\n",
+    "\n",
+    "When you create a Service (NodePort or LoadBalancer), Kubernetes automatically load balances across all frontend pods:\n",
+    "\n",
+    "```yaml\n",
+    "apiVersion: v1\n",
+    "kind: Service\n",
+    "metadata:\n",
+    "  name: frontend-service\n",
+    "spec:\n",
+    "  type: LoadBalancer  # or NodePort\n",
+    "  selector:\n",
+    "    component: frontend  # Selects ALL frontend pods\n",
+    "  ports:\n",
+    "  - port: 8000\n",
+    "```\n",
+    "\n",
+    "**How Traffic Flows**:\n",
+    "1. **External Load Balancer** (cloud provider or Ingress) receives request\n",
+    "2. **Kubernetes Service** load balances to any frontend pod\n",
+    "3. **Frontend** publishes inference request to NATS\n",
+    "4. **NATS** routes to an available worker (on any node)\n",
+    "5. **Worker** responds via NATS\n",
+    "6. **Frontend** returns HTTP response\n",
+    "\n",
+    "**Key Benefits**:\n",
+    "- ✅ **High Availability**: If one frontend crashes, others continue\n",
+    "- ✅ **Load Distribution**: Spread HTTP connections across pods\n",
+    "- ✅ **Dynamic Discovery**: NATS decouples frontends from workers\n",
+    "- ✅ **Flexible Scaling**: Add/remove frontends independently\n",
+    "\n",
+    "**Single Node (This Lab)**:\n",
+    "In your single-node setup, multiple frontends provide less benefit since there's no network distribution. But you can still see how NATS-based service discovery works!\n",
+    "\n",
     "### When to Use Grove\n",
     "\n",
     "| Scenario | Use Grove? | Why |\n",
@@ -103,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2549d883",
+   "id": "d74c3342",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c889a2b6",
+   "id": "a649bc29",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS Message Bus\n",
@@ -140,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c54f906b",
+   "id": "6478f91d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5edeed4",
+   "id": "78b22727",
    "metadata": {},
    "source": [
     "### Step 3: Install etcd Coordination Layer\n",
@@ -183,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e4aa820",
+   "id": "dfc56f39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3a44cbe",
+   "id": "1a1ccd61",
    "metadata": {},
    "source": [
     "### Step 4: Verify Grove Infrastructure\n",
@@ -226,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2d14982",
+   "id": "da26b757",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b280c26e",
+   "id": "5a9a2f54",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring\n",
@@ -269,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dce60ed",
+   "id": "2822bd53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79868f42",
+   "id": "9b208ac9",
    "metadata": {},
    "source": [
     "---\n",
@@ -347,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1aa984e",
+   "id": "420dedc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e422a30",
+   "id": "4b0f5d8b",
    "metadata": {},
    "source": [
     "### Step 2: Create NodePort Service\n",
@@ -423,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1537b748",
+   "id": "0aa03fe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b396a494",
+   "id": "5a1206ff",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -464,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb961026",
+   "id": "21e2f311",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bb47ab7",
+   "id": "f7b45bbf",
    "metadata": {},
    "source": [
     "### Step 4: Test Inference"
@@ -500,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f5dbb07",
+   "id": "b98262d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a73dfeeb",
+   "id": "a1e4c7ad",
    "metadata": {},
    "source": [
     "### Step 5: Verify NATS Communication"
@@ -532,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbe2d5fa",
+   "id": "614f1832",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32b92464",
+   "id": "7841e0a9",
    "metadata": {},
    "source": [
     "---\n",
@@ -573,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eaa0d4b",
+   "id": "a85538e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "579fa052",
+   "id": "8971de2e",
    "metadata": {},
    "source": [
     "### Step 2: Understanding NATS Metrics\n",
@@ -716,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dad64c2a",
+   "id": "a3a9b99d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9f20279",
+   "id": "5014c4a4",
    "metadata": {},
    "source": [
     "---\n",
@@ -800,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dc382df",
+   "id": "1530ff6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bad5a960",
+   "id": "00400cde",
    "metadata": {},
    "source": [
     "---\n",
@@ -851,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78139745",
+   "id": "9b983c8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94ffc8a",
+   "id": "1b508d93",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. In a single-node setup, local cache is more efficient than distributed cache, so you may not see significant Grove cache sharing activity.\n",
@@ -895,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fc33bec",
+   "id": "022b679d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e218be83",
+   "id": "d081697f",
    "metadata": {},
    "source": [
     "### etcd Health Check\n",
@@ -922,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a078334",
+   "id": "0f1b4597",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58af4d12",
+   "id": "b305b523",
    "metadata": {},
    "source": [
     "---\n",
@@ -959,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2174d794",
+   "id": "28f9f54b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +1021,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3eef79c2",
+   "id": "17ade5a8",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -987,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eca810a9",
+   "id": "84b03a38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "707e1967",
+   "id": "17797378",
    "metadata": {},
    "source": [
     "### Step 3: Remove Grove Infrastructure (Optional)\n",
@@ -1023,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "835f39cd",
+   "id": "68a2d77d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90caa814",
+   "id": "3c1d84b4",
    "metadata": {},
    "source": [
     "---\n",
@@ -1115,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94460dfe",
+   "id": "d45e3ee0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d722cb4",
+   "id": "38528bae",
    "metadata": {},
    "source": [
     "### etcd Not Starting"
@@ -1141,7 +1186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe508d68",
+   "id": "f672d6df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "874a8f29",
+   "id": "825168e9",
    "metadata": {},
    "source": [
     "### Workers Not Connecting to Grove"
@@ -1167,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97cad060",
+   "id": "d45fc509",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fadca62b",
+   "id": "63c37471",
    "metadata": {},
    "source": [
     "### No Cache Sharing Observed\n",
@@ -1200,9 +1245,11 @@
     "\n",
     "## Additional Resources\n",
     "\n",
-    "- **Grove Documentation**: https://docs.nvidia.com/dynamo/latest/kubernetes/grove/\n",
+    "- **Grove Deployment Guide**: https://docs.nvidia.com/dynamo/latest/guides/dynamo_deploy/grove.html\n",
+    "- **Grove GitHub Repository**: https://github.com/NVIDIA/grove\n",
     "- **NATS Documentation**: https://docs.nats.io/\n",
     "- **etcd Documentation**: https://etcd.io/docs/\n",
+    "- **NVIDIA Dynamo Documentation**: https://docs.nvidia.com/dynamo/latest/\n",
     "- **Distributed Systems Patterns**: Understanding consensus and coordination\n",
     "- **Cache Sharing Strategies**: Martin Kleppmann's \"Designing Data-Intensive Applications\"\n",
     "\n",
